--- a/Back End/ShopAPI/appsettings.json
+++ b/Back End/ShopAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqliteDatabase": "Data Source=../Shop.DataAccess/shop.db"
+  }
 }
