- Added Base for Integration Tests
- Added Categories Controller Tests

--- a/Back End/ShopAPI/ShopAPI.csproj
+++ b/Back End/ShopAPI/ShopAPI.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Shop.Models\Shop.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+     <InternalsVisibleTo Include="Shop.Testing" />
+  </ItemGroup>
+
 </Project>
