- Refactoring Back End Projects
- Added Groups Service and Controller

--- a/Back End/Shop.DataAccess/appsettings.json
+++ b/Back End/Shop.DataAccess/appsettings.json
@@ -1,5 +1,6 @@
 {
 	"ConnectionStrings": {
-		"SqliteDatabase": "Data Source=shop.db"
+		"SqliteDatabase": "Data Source=shop.db",
+		"DefaultDatabase": "SqliteDatabase"
 	}
 }
