--- a/Back End/ShopAPI/appsettings.json
+++ b/Back End/ShopAPI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteDatabase": "Data Source=../Shop.DataAccess/shop.db"
+    "SqliteDatabase": "Data Source=../Shop.DataAccess/shop.db",
+    "DefaultDatabase": "SqliteDatabase"
   }
 }
