--- a/Back End/ShopAPI/appsettings.json
+++ b/Back End/ShopAPI/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "SqliteDatabase": "Data Source=../Shop.DataAccess/shop.db",
     "DefaultDatabase": "SqliteDatabase"
+  },
+  "JwtConfig": {
+    "Key": "This is the key used to sign and verify the JWT token",
+    "Issuer": "David John",
+    "Audience": "Gold Shop"
   }
 }
