--- a/Back End/Shop.DataAccess/Shop.DataAccess.csproj
+++ b/Back End/Shop.DataAccess/Shop.DataAccess.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Shop.Models\Shop.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="appsettings.json">
+    <None Update="dbsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
