--- a/Back End/Shop.Authentication/Shop.Authentication.csproj
+++ b/Back End/Shop.Authentication/Shop.Authentication.csproj
@@ -12,10 +12,16 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shop.Models\Shop.Models.csproj" />
     <ProjectReference Include="..\Shop.DataAccess\Shop.DataAccess.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <None Update="tokendbsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
