--- a/Back End/ShopAPI/appsettings.json
+++ b/Back End/ShopAPI/appsettings.json
@@ -5,11 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteDatabase": "Data Source=../Shop.DataAccess/shop.db",
+    "SqliteTokenDatabase": "DataSource=token.db",
+    "DefaultTokenDB": "SqliteTokenDatabase",
+    "SqliteDatabase": "DataSource=shop.db",
     "DefaultDatabase": "SqliteDatabase"
   },
+  "AllowedHosts": "*",
   "JwtConfig": {
     "Key": "This is the key used to sign and verify the JWT token",
     "Issuer": "David John",
